ingress-nginx/test/atehna-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: athena
  namespace: wolf
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /athena/?(.*)
        backend:
          serviceName: athena-service
          servicePort: 2013
